--- a/assets/styles/utils/_page.css
+++ b/assets/styles/utils/_page.css
@@ -9,6 +9,7 @@ html {
 
   font-size: 62.5%;
   scrollbar-gutter: stable;
+  overflow-x: hidden;
 }
 body {
   color: var(--grayscale-text-body);
@@ -18,6 +19,8 @@ body {
 }
 
 body {
+  overflow-x: hidden;
+
   &.lock {
     overflow: hidden;
   }
